# bot-telegram

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  test.py
.github/workflows/: deploy.yml  envios.yml  pushImg.yml
app/: botrun.py  extraction.py  main.py  runtime.py
app/api/: main.py
app/api/routes/: auth.py  createbot.py  dashboard.py  landingpage.py  subscription.py
app/data/alembic/: env.py
app/data/alembic/versions/: 1f231f5f73c0_create_full_database.py  21e0e137bfc4_trocando_store_id_por_brand.py  44ae791f28f6_trocando_store_id_por_brand.py  45b0282f06ea_users_free.py  4ffe110fef62_fix_date_defaults.py  595ed4b3bb23_time_to_sent_bot_default_12_hrs.py  6d0bff545853_tirando_limite_de_chracter_da_table_ml.py  6dcf6650b7b9_voltando_limite_de_chracter_e_mudando_.py  6fd7e932ce6b_fix_date_defaults.py  7d01465d0877_botstore_bot_id.py  8b2fabc24f65_bot_stores_by_googleid.py  8f3a5f6c2c10_delivery_jobs_and_bot_schedules.py  af9a97815ec1_table_ml.py  dc7912bf1174_ml_enum.py  e52e3177e711_create_sent_at.py  ebf07b352506_add_plan.py  fc9e0bf7aa2a_time_to_sent_bot.py
app/src/domain/: models.py
app/src/infrabackend/: config.py  database.py  repository.py  schemas.py
app/src/services/: bot.py  delivery.py  extract.py  mlExtract.py  scraper.py
app/templates/: createbot.html  dashboard.html  index.html  landingpage.html  login.html  subscription.html
data/: products.db
deploy/: docker-compose.yml  nginx.conf
infra/: main.tf  outputs.tf  startup.sh  variables.tf
src/garimpo/: bot.py  config.py  extract.py  main.py  models.py  schemas.py
src/garimpo/domain/: models.py
src/garimpo/infra/: config.py  database.py  repository.py  schemas.py
src/garimpo/services/: bot.py  extract.py
